log
Tue 21 Mar 2023 11:25:43 PM UTC: 
 tests:  0|6
total_score: 0/70
28e5d2a
Wed 22 Mar 2023 01:17:32 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb123ca
Wed 22 Mar 2023 01:29:07 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e7cf552
Wed 22 Mar 2023 01:31:21 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: expected identifier or ‘(’ before ‘->’ token
   41 |   List->head = node->data;
      |       ^~
Compilation failed
b4d7419
Wed 22 Mar 2023 01:31:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘firstList’:
list.c:40:17: error: ‘node’ is used uninitialized [-Werror=uninitialized]
   40 |   Node * node = createNode(node);
      |                 ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f17a134
Wed 22 Mar 2023 01:32:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
32ea6da
Wed 22 Mar 2023 01:32:39 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
991547f
Wed 22 Mar 2023 01:33:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
82d8cb0
Wed 22 Mar 2023 01:35:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:10: error: too few arguments to function ‘createNode’
   41 |   node = createNode();
      |          ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
list.c: In function ‘nextList’:
list.c:48:3: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   48 |   node = createNode(node);
      |   ^~~~
      |   Node
list.c:48:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3579bae
Wed 22 Mar 2023 01:35:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:21: error: passing argument 1 of ‘createNode’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   node = createNode(1);
      |                     ^
      |                     |
      |                     int
list.c:22:26: note: expected ‘void *’ but argument is of type ‘int’
   22 | Node * createNode(void * data) {
      |                   ~~~~~~~^~~~
list.c: In function ‘nextList’:
list.c:48:3: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   48 |   node = createNode(node);
      |   ^~~~
      |   Node
list.c:48:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
6720fd9
